...
    var body: some View {
        NavigationStack {
            EditCustomExerciseView(exerciseValues: $exerciseValues)
                .navigationBarTitle("Edit Exercise", displayMode: .inline)
                .navigationBarItems(
                    leading:
                    Button("Cancel") {
                        self.presentationMode.wrappedValue.dismiss()
                    },
                    trailing: saveButton
                )
        }
    }
...
